@@ -39,7 +39,12 @@ public class StringDecodeAction extends CalculateAction {
         if (value == null || value.isEmpty()) return;
         String result = switch (type.getIndex()) {
             case 0 -> {
-                yield URLDecoder.decode(value, StandardCharsets.UTF_8);
+                try {
+                    yield URLDecoder.decode(value, StandardCharsets.UTF_8.name());
+                } catch (Exception e) {
+                    e.printStackTrace();
+                    yield value;
+                }
             }
             case 1 -> new String(Base64.decode(value, Base64.NO_WRAP));
             default -> value;
